--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -71,8 +71,9 @@
   border: 4px solid #febb02;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 
+  padding-left: 14px;
   border-radius: 6px;
   position: absolute;
   max-width: 1024px;
@@ -112,6 +113,7 @@
 }
 
 .headerSearchItem .headerBtn {
+  width: 124px;
   height: 100%;
 }
 
