--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -1,5 +1,7 @@
 .footer {
-
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
     max-width: 1024px;
     font-size: 12px;
@@ -29,4 +31,5 @@
 
 .fText {
     text-align: center;
+    margin-bottom: 10px;
 }
